[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.12"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/eimage"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.12" }

thiserror = "2.0.17"
anyhow = "1.0.100"
clap = "4.5.53"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
image="0.25.9"
chrono = "0.4.42"
rayon = "1.11.0"
tar = "0.4.44"
zstd = "0.13.3"
